feat: implements bulk recipient deletion
