# src/generated/swagger.json
@@ -54,6 +54,77 @@
         }
       }
     },
+    "/api/receivers/bulk-delete": {
+      "post": {
+        "tags": [
+          "Receiver"
+        ],
+        "description": "Delete many `Recipient` by its `ids`",
+        "requestBody": {
+          "required": true,
+          "description": "A list of `Recipient`'s ids.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "ids": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": [
+                  "ids"
+                ]
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "deletion success.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "total": {
+                      "type": "integer",
+                      "description": "The total of `Receiver` deleteds."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "invalid json body.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/receivers": {
       "get": {
         "tags": [
